# cs-16-computer-vision

./: .gitignore  README.md  app.py  converters.py  predictions.py  pyproject.toml  rename_files.py  test_recording.ipynb  train_my_yolov8n.py
