[tool.poetry]
name = "ai-aimbot"
version = "0.1.0"
description = ""
authors = ["Dmytro Maior <mayor4090Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
mss = "^9.0.1"
ultralytics = "^8.1.18"
mouse = "^0.7.1"
pyautogui = "^0.9.54"
keyboard = "^0.13.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
